--- a/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
+++ b/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
@@ -32,7 +32,18 @@
                 <a class="navbar-brand" href="{% url 'animalFormulario' %}">animalFormulario</a>
                 <a class="navbar-brand" href="{% url 'vehiculoFormulario' %}">vehiculoFormulario</a>
                 <a class="navbar-brand" href="{% url 'busquedaNombre' %}">Buscar</a>
-                <a class="btn btn-primary" href="#signup">INICIAR</a>
+                <a class="navbar-brand" href="{% url 'leerFamiliares' %}">leerFamiliares</a>
+                <a class="navbar-brand" href="{% url 'List' %}">Lista Animales</a>
+                {%if not request.user.is_authenticated %}
+                <a class="btn btn-primary" href="{% url 'Login' %}">INICIAR</a>
+                {% endif %}
+                {%if request.user.is_authenticated %}
+                <div class="text-center">
+                <img height="40px" src="{{url}}" />
+                <p class="text-muted small mb-4 mb-lg-0">Bienvenido, {{user.username}}</p>
+                <a class="btn btn-primary" href="{% url 'logout' %}">Salir</a>
+                </div>
+                {% endif %}
             </div>
         </nav>
         <div class="row">
@@ -55,7 +66,11 @@
 
                             <h1 class="mb-2">Estoy reutilizando un diseño</h1>
                             
-                           
+                            <h1 style="background-color:yellow">{{mensaje}}</h2>
+                            {%if request.user.is_authenticated %}
+                            <img src="{{url}}" style="height:40px;width:45px;">
+                           <button> <a href="{%url 'logout' %}">Salir de Sesión</a></button>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
